docs/.vitepress/theme/style.css
/**
 * Customize default theme styling by overriding CSS variables:
 * https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
 */

/**
 * Colors
 *
 * Each colors have exact same color scale system with 3 levels of solid
 * colors with different brightness, and 1 soft color.
 *
 * - `XXX-1`: The most solid color used mainly for colored text. It must
 *   satisfy the contrast ratio against when used on top of `XXX-soft`.
 *
 * - `XXX-2`: The color used mainly for hover state of the button.
 *
 * - `XXX-3`: The color for solid background, such as bg color of the button.
 *   It must satisfy the contrast ratio with pure white (#ffffff) text on
 *   top of it.
 *
 * - `XXX-soft`: The color used for subtle background such as custom container
 *   or badges. It must satisfy the contrast ratio when putting `XXX-1` colors
 *   on top of it.
 *
 *   The soft color must be semi transparent alpha channel. This is crucial
 *   because it allows adding multiple "soft" colors on top of each other
 *   to create a accent, such as when having inline code block inside
 *   custom containers.
 *
 * - `default`: The color used purely for subtle indication without any
 *   special meanings attched to it such as bg color for menu hover state.
 *
 * - `brand`: Used for primary brand colors, such as link text, button with
 *   brand theme, etc.
 *
 * - `tip`: Used to indicate useful information. The default theme uses the
 *   brand color for this by default.
 *
 * - `warning`: Used to indicate warning to the users. Used in custom
 *   container, badges, etc.
 *
 * - `danger`: Used to show error, or dangerous message to the users. Used
 *   in custom container, badges, etc.
 * -------------------------------------------------------------------------- */

 :root {
  --vp-c-default-1: var(--vp-c-gray-1);
  --vp-c-default-2: var(--vp-c-gray-2);
  --vp-c-default-3: var(--vp-c-gray-3);
  --vp-c-default-soft: var(--vp-c-gray-soft);

  --vp-c-brand-1: var(--vp-c-indigo-1);
  --vp-c-brand-2: var(--vp-c-indigo-2);
  --vp-c-brand-3: var(--vp-c-indigo-3);
  --vp-c-brand-soft: var(--vp-c-indigo-soft);

  --vp-c-tip-1: var(--vp-c-brand-1);
  --vp-c-tip-2: var(--vp-c-brand-2);
  --vp-c-tip-3: var(--vp-c-brand-3);
  --vp-c-tip-soft: var(--vp-c-brand-soft);

  --vp-c-warning-1: var(--vp-c-yellow-1);
  --vp-c-warning-2: var(--vp-c-yellow-2);
  --vp-c-warning-3: var(--vp-c-yellow-3);
  --vp-c-warning-soft: var(--vp-c-yellow-soft);

  --vp-c-danger-1: var(--vp-c-red-1);
  --vp-c-danger-2: var(--vp-c-red-2);
  --vp-c-danger-3: var(--vp-c-red-3);
  --vp-c-danger-soft: var(--vp-c-red-soft);
}

/**
 * Component: Button
 * -------------------------------------------------------------------------- */

:root {
  --vp-button-brand-border: transparent;
  --vp-button-brand-text: var(--vp-c-white);
  --vp-button-brand-bg: var(--vp-c-brand-3);
  --vp-button-brand-hover-border: transparent;
  --vp-button-brand-hover-text: var(--vp-c-white);
  --vp-button-brand-hover-bg: var(--vp-c-brand-2);
  --vp-button-brand-active-border: transparent;
  --vp-button-brand-active-text: var(--vp-c-white);
  --vp-button-brand-active-bg: var(--vp-c-brand-1);
}

/**
 * Component: Home
 * -------------------------------------------------------------------------- */

:root {
  --vp-home-hero-name-color: transparent;
  --vp-home-hero-name-background: -webkit-linear-gradient(
    120deg,
    #bd34fe 30%,
    #41d1ff
  );

  --vp-home-hero-image-background-image: linear-gradient(
    -45deg,
    #bd34fe 50%,
    #47caff 50%
  );
  --vp-home-hero-image-filter: blur(44px);
}

@media (min-width: 640px) {
  :root {
    --vp-home-hero-image-filter: blur(56px);
  }
}

@media (min-width: 960px) {
  :root {
    --vp-home-hero-image-filter: blur(68px);
  }
}

/**
 * Component: Custom Block
 * -------------------------------------------------------------------------- */

:root {
  --vp-custom-block-tip-border: transparent;
  --vp-custom-block-tip-text: var(--vp-c-text-1);
  --vp-custom-block-tip-bg: var(--vp-c-brand-soft);
  --vp-custom-block-tip-code-bg: var(--vp-c-brand-soft);
}

/**
 * Component: Algolia
 * -------------------------------------------------------------------------- */

.DocSearch {
  --docsearch-primary-color: var(--vp-c-brand-1) !important;
}

/**
 * CUSTOM STYLES
 * -------------------------------------------------------------------------- */
:root {
  --vp-layout-max-width: 95vw;

  --vp-c-brand-1: #4e52b8;
  --vp-c-brand-2: #0f8060;
  --vp-c-brand-3: #02735c;
  --vp-nav-logo-height: 42px;
  --vp-home-hero-name-color: transparent;
  --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #11a47a 30%, #e9af58);
  --vp-home-hero-image-background-image: linear-gradient(-45deg, #0fa47a 50%, #407e9a 50%);
  --vp-c-bg-alt: var(--vp-sidebar-bg-color);
  --vp-code-font-size: 0.875rem;

  --props-table-background-color: hsla(0,0%,100%,.005);
  --props-table-border-color: hsla(0,0%,100%,.085);
  --props-table-border-radius: 6px;
  --props-table-border-color: var(--border-color);
  --props-table-th-bg-color: rgba(0,0,0,.02);
}

.dark {
  --vp-c-brand-1: #1aab87;
  --vp-c-brand-2: #0f8060;
  --vp-c-brand-3: #02735c;
  --vp-c-bg: #161619;
  --vp-sidebar-bg-color: #1e1e23;
  --vp-code-block-bg: #131315;

  --props-table-background-color: hsla(0,0%,100%,.005);
  --props-table-border-color: hsla(0,0%,100%,.085);
  --props-table-th-bg-color: hsla(0,0%,100%,.05);
}

h1, h2, h3, h4, h5, h6, p {
  font-size: inherit;
}

.vp-doc {
  h3 {
    font-size: var(--font-size-600);
  }

  h4 {
    font-size: var(--font-size-400);
  }

  div[style*="font-size:0.8125rem"] {
    p {
      line-height: 24px;
    }

    h3 {
      margin-bottom: 1.5rem;
    }
  }
}

html:not(.example-preview) {
  background-color: var(--vp-c-bg);
}

.VPFeature .title {
  color: var(--text-strong);
}

.VPSidebarItem.level-0 > .items {
  padding-left: 16px;
}

.VPSidebarItem.level-0 > .item > .text {
  font-size: 16px;
  font-weight: 500;
}

.VPDoc.has-aside .content-container.content-container {
  max-width: 896px;
}

.vp-doc div[class*='language-'], .vp-block {
  border: 1px solid var(--border-color);
}

.vp-doc h1, .vp-doc h2, .vp-doc h3, .vp-doc h4, .vp-doc h5, .vp-doc h6 {
  color: var(--text-strong);
}

.VPNavBar.has-sidebar .curtain {
  display: none;
}

.dark-mode-logo {
  display: none;
}

.dark {
  .light-mode-logo {
    display: none;
  }

  .dark-mode-logo {
    display: block;
  }
}

.VPHome #our-shopify-brands {
  font-size: 1.8rem;
  font-weight: 700;
  color: var(--text-strong);

  margin: 48px 0 16px;
  padding-top: 24px;
  letter-spacing: -0.02em;
  line-height: 32px;
}

.VPHero .text {
  color: var(--text-strong);
}

.vp-code-group .tabs {
  border: 1px solid var(--border-color);
  border-bottom: 0;
}

.outline-title {
  color: var(--text-strong);
}

